--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
         （運営さんからの許可はもらっています）</p>
 
         <h3>■ 企画内容</h3>
-        <p>NFTのslothをお持ちの方限定にはなってしまいますが、<br>
-        自分のslothをYouTubeの動画素材として使ってもいいよ！という方をこの投稿のコメント欄で随時募集するというシンプルな企画です。</p>
-        <p>こちらのYouTube切り抜きショート動画の素材として、応募があったslothを編集者の気分や動画の内容に合わせてランダムに選び、素材として使用させて頂きます。<br>
-        ＊応募したけど編集者に選ばれないという場合もあるのでご了承ください。<br>
-        動画に登場するイメージは、この投稿のコメント欄に貼っておきますので、興味がある方はご確認ください（左下にさりげなく登場させています）。</p>
+        <p>NFTのslothをお持ちの方限定にはなってしまいますが、こちらのYouTube切り抜きショート動画の素材として、応募があったslothを編集者の気分や動画の内容に合わせてランダムに選び、素材として使用させて頂きます。</p>
+        <p>＊応募したけど編集者に選ばれないという場合もあるのでご了承ください。</p>
+        <p>動画に登場するイメージは、このサイトのslothたちを覗いてみてください。</p>
+
         <p>＊あくまでも「けんすうスピーク」の内容がメイン（主役）となるため、一部の素材（脇役）という位置づけになることはご了承ください。</p>
 
         <h3>■ 募集期間</h3>
