fix: prevent preview reload loops (iframe sandbox + watch ignore)

--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
           <a class="buy-cta" href="https://sloth-nft.life/" target="_blank" rel="noopener">slothはここから買えるよ⬇︎</a>
         </div>
         <div class="embed-frame-wrap">
-          <iframe class="embed-frame" src="https://sloth-nft.life/" title="sloth公式サイト" loading="lazy"></iframe>
+          <iframe
+            class="embed-frame"
+            src="https://sloth-nft.life/"
+            title="sloth公式サイト"
+            loading="lazy"
+            sandbox="allow-same-origin allow-scripts allow-forms allow-popups"
+            referrerpolicy="no-referrer"
+          ></iframe>
         </div>
       </section>
 
