fix(ui): 自動再生の停止とモーダルレイアウトの改善

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <button class="modal-close" id="modal-close" aria-label="閉じる">×</button>
         <div class="player-wrap">
           <iframe id="player-frame" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+          <div class="player-placeholder">動画リストから再生したいものをクリックしてください</div>
         </div>
         <div class="playlist" id="playlist" aria-label="キャラクターの動画一覧"></div>
       </div>
